<?xml version="1.0"?>
<package>
  <name>panda_gazebo</name>
  <version>0.0.1</version>
  <description>This gazebo package for panda based on iiwa</description>

  <maintainer email="ttaunyazov@nu.edu.kz">Tasbolat Taunyazov</maintainer>


  <license>BSD</license>



  <buildtool_depend>catkin</buildtool_depend>

  <!--run_depend>gazebo_description</run_depend -->
  <run_depend>gazebo_ros</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
