<?xml version="1.0"?>
<package format="2">
  <name>panda_moveit</name>
  <version>0.0.1</version>
  <description>The panda moveit package: changed to work with fake controller applicable to Gazebo</description>

  <maintainer email="ttaunyazov@nu.edu.kz">Tasbolat Taunyazov</maintainer>



  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>panda_description</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_control_interface</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
